--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.19 01:10:10<br />
+<b>start</b> - 2022.12.20 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -8,7 +8,7 @@ Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
 Hungary_VotiveChurch, not updated, -44.25000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
-Slovakia_ChristmasStable, not updated, 0.0<br />
+Slovakia_ChristmasStable, not updated, 0.09999999999999432<br />
 Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.6000000000000085<br />
@@ -20,12 +20,12 @@ NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.0<br />
-Finland_Nurmijarvi, <b>updated</b>, 245, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.30999999999999517<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
-USA_LakewoodPrizewheel, <b>updated</b>, 1180, <a href="https://www.munzee.com/map/9zvxsgvmr/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakewoodPrizewheel.json" target="_blank">json</a><br />
+USA_LakewoodPrizewheel, not updated, 0.02999999999999403<br />
 Netherlands_TeaAtGrandma, not updated, 1.0<br />
 Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
@@ -149,272 +149,8 @@ UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle kihagyva (100%), <br />
-USA_LightningBoltInSapphire, <b>updated</b>, 286, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.5813953488372121<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove kihagyva (100%), <br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.07000000000000028<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, not updated, 0.0<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
-Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
-Hungary_GyorVgFarm kihagyva (100%), <br />
-Hungary_GyoriVasutiKert, not updated, 0.0<br />
-Hungary_Colors kihagyva (100%), <br />
-Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, 0.0<br />
-Hungary_60Color kihagyva (100%), <br />
-Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen2202, not updated, 0.0<br />
-Hungary_EvolutionDebrecen kihagyva (100%), <br />
-Hungary_JewelSandwich, not updated, 0.0<br />
-Hungary_Cimbi kihagyva (100%), <br />
-Hungary_Picu kihagyva (100%), <br />
-Hungary_Honey kihagyva (100%), <br />
-Hungary_QR kihagyva (100%), <br />
-Hungary_DebreceniKereszt kihagyva (100%), <br />
-Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
-UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
-UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
-UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
-UnitedKingdom_LondonUnderground, not updated, 0.0<br />
-UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
-UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
-UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
-UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
-UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
-UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
-UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.7999999999999972<br />
-UnitedKingdom_SailingBoat, <b>updated</b>, 696, <a href="https://www.munzee.com/map/u10j6x1kx/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SailingBoat.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_HendonCircle kihagyva (100%), <br />
-Australia_9thBirthdayInQueensland kihagyva (100%), <br />
-Australia_MayPole kihagyva (100%), <br />
-Australia_PyramidOBadges kihagyva (100%), <br />
-Australia_QLD-Dingo kihagyva (100%), <br />
-Australia_HappyTenMunzee kihagyva (100%), <br />
-Australia_QLDPerm-Temp, not updated, -42.0<br />
-Australia_UnicornInThePark kihagyva (100%), <br />
-Germany_Berlin-HighVoltage kihagyva (100%), <br />
-Germany_ColoursOfBerlin kihagyva (100%), <br />
-Germany_9thBirthdayInBerlin kihagyva (100%), <br />
-Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
-Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
-Hungary_Debrecen kihagyva (100%), <br />
-Hungary_DeoCachingClan kihagyva (100%), <br />
-Hungary_TocoskertsArrows kihagyva (100%), <br />
-UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
-UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
-Canada_OttawaCancerRibbon kihagyva (100%), <br />
-Canada_OttawaGoldfish kihagyva (100%), <br />
-Canada_BananaBread kihagyva (100%), <br />
-Canada_Elephriends kihagyva (100%), <br />
-Canada_LizzysUnicorn kihagyva (100%), <br />
-Canada_JeffsFarm kihagyva (100%), <br />
-UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
-Germany_JohnTheFab41 kihagyva (100%), <br />
-Germany_RingoTheFab4, not updated, 0.05999999999999872<br />
-Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
-Germany_PaulTheFab43, not updated, 0.0<br />
-Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
-Hungary_MaXGarden kihagyva (100%), <br />
-Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, not updated, 0.4099999999999966<br />
-Hungary_MarioInVac, not updated, 0.0<br />
-Hungary_LovagokKertje kihagyva (100%), <br />
-Hungary_ShieldKecskemet, not updated, 0.0<br />
-Hungary_Mini kihagyva (100%), <br />
-Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
-Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
-Hungary_EyesInTheNight kihagyva (100%), <br />
-Hungary_PomazLocomotiv kihagyva (100%), <br />
-Slovakia_Bratislava kihagyva (100%), <br />
-Slovakia_ChilliKiller, not updated, 0.0<br />
-Slovakia_LakeLighthousePainting, not updated, 0.0<br />
-Slovakia_ChargeBratislava kihagyva (100%), <br />
-Slovakia_VirtualJoy kihagyva (100%), <br />
-Slovakia_ElectricLetters kihagyva (100%), <br />
-Slovakia_DevinCastle kihagyva (100%), <br />
-Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
-Slovakia_1stDayEvo kihagyva (100%), <br />
-Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
-Slovakia_AgentSun kihagyva (100%), <br />
-Slovakia_CandleTombstone kihagyva (100%), <br />
-Canada_SecretLantern kihagyva (100%), <br />
-Canada_OttawaCross kihagyva (100%), <br />
-Canada_MysteryBoat kihagyva (100%), <br />
-Canada_SaveTheMonarchs kihagyva (100%), <br />
-Canada_FlutteringByOrleans kihagyva (100%), <br />
-Canada_MunzeeViolin kihagyva (100%), <br />
-Canada_MysteryKeyboard kihagyva (100%), <br />
-Canada_MunzeeDrumSet kihagyva (100%), <br />
-Canada_MunzeeGuitar kihagyva (100%), <br />
-Canada_MunzeeTrumpet kihagyva (100%), <br />
-Canada_OttawaLeprechaun kihagyva (100%), <br />
-Canada_SandcastleFun kihagyva (100%), <br />
-Canada_OttawaTornado kihagyva (100%), <br />
-Canada_MunzeeSnowglobe kihagyva (100%), <br />
-Canada_RainbowStar kihagyva (100%), <br />
-Canada_TheSecretEgg kihagyva (100%), <br />
-Canada_JimmysTractor kihagyva (100%), <br />
-Canada_BeeStrongJeffeth kihagyva (100%), <br />
-Canada_JimmysDog kihagyva (100%), <br />
-Canada_JimmysBoat kihagyva (100%), <br />
-Canada_LizzysKitty kihagyva (100%), <br />
-Canada_RocklandEasterEggs kihagyva (100%), <br />
-Canada_ClairesCake kihagyva (100%), <br />
-Canada_StanleyForDad kihagyva (100%), <br />
-Canada_RocklandTree kihagyva (100%), <br />
-Canada_JimmysRocket kihagyva (100%), <br />
-Canada_BreadInRockland kihagyva (100%), <br />
-Canada_MarchingFlats kihagyva (100%), <br />
-Canada_RocklandHeart kihagyva (100%), <br />
-Canada_LizzysElephant kihagyva (100%), <br />
-Canada_AdventuresInRockland kihagyva (100%), <br />
-Canada_SecretLove kihagyva (100%), <br />
-Canada_LizzysGoldfish kihagyva (100%), <br />
-Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
-Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
-Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
-USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
-USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
-Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
-UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
-Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
-Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
-Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
-Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
-Netherlands_StroopwafelInvasionInOspel, not updated, 0.0<br />
-UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
-Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
-Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
-Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
-Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
-Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
-Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
-USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
-USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
-Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
-USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
-Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
-Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
-Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
-Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
-USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
-Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
-Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
-Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
-USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
-USA_MHQBash4Casino kihagyva (100%), <br />
-USA_MHQV4Pin kihagyva (100%), <br />
-USA_ZeeKnight, not updated, 0.0<br />
-USA_MichaelMyersHalloween, not updated, 0.0<br />
-USA_MunzeeLogoHistory2011, not updated, 0.0<br />
-USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
-USA_MunzeeLogoHistory2014, not updated, 0.0<br />
-USA_MunzeeLogoHistory2015, not updated, 0.0<br />
-USA_PiratesFlag kihagyva (100%), <br />
-USA_Zelda, not updated, 0.0<br />
-USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
-Germany_FBombBerlin kihagyva (100%), <br />
-Hungary_FBombBudapest kihagyva (100%), <br />
-USA_FBombCedarRapids kihagyva (100%), <br />
-Denmark_FBombHammel kihagyva (100%), <br />
-USA_FBombMcKinney kihagyva (100%), <br />
-USA_FBombTampa kihagyva (100%), <br />
-USA_RoverPin, not updated, 0.0<br />
-USA_EmeraldInAnchorage kihagyva (100%), <br />
-USA_EmeraldInChesterfield kihagyva (100%), <br />
-USA_EmeraldInMcKinney kihagyva (100%), <br />
-Australia_EmeraldInMelbourne kihagyva (100%), <br />
-UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
-Australia_EmeraldInSydney kihagyva (100%), <br />
-BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
-Serbia_JapanseMaple kihagyva (100%), <br />
-Greece_TheLighthouseOfChania kihagyva (100%), <br />
-Jersey_JerzeeClan, not updated, 0.0<br />
-Jersey_JerseyColorPaw, not updated, 0.0<br />
-Jersey_StOuen kihagyva (100%), <br />
-Portugal_MadeiraMonumental kihagyva (100%), <br />
-Portugal_LargoDaPaz kihagyva (100%), <br />
-Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
-Portugal_Portinho kihagyva (100%), <br />
-Croatia_CroatiaLocketHeart, not updated, 0.0<br />
-Greece_Zakynthos, not updated, 0.0<br />
-Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
-Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
-Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
-UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
-France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
-Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2022.12.19 02:05:06<br />
-összesen 3296<br />
+USA_MontgomeryBaseball, <b>updated</b>, 302, <a href="https://www.munzee.com/map/djf8hp7k0/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryBaseball.json" target="_blank">json</a> <b>100%</b><br />
