--- a/feladat.html
+++ b/feladat.html
@@ -9,3 +9,50 @@ Hungary_VotiveChurch, not updated, -38.74000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, <b>updated</b>, 1117, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a><br />
+Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.6000000000000085<br />
+USA_PrattvillePansy, not updated, 0.0<br />
+Hungary_MinerSymbol, not updated, 1.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.09000000000000341<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.0<br />
+Finland_Nurmijarvi, not updated, 0.0<br />
+Finland_Hyvinkaa, not updated, 0.30999999999999517<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.02999999999999403<br />
+Netherlands_TeaAtGrandma, not updated, 1.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
+Australia_QueensGambit-Horse, not updated, 0.0<br />
+USA_CommerceBarnyard kihagyva (100%), <br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, not updated, 0.8999999999999986<br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.0<br />
+USA_Turtle, not updated, 0.264550264550266<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.5900000000000034<br />
+Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 1.0<br />
+Belgium_KnokkeHeist, not updated, 0.5<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
+Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.46999999999999886<br />
+Hungary_TaskasSmiley, <b>updated</b>, 207, <a href="https://www.munzee.com/map/u2mxgdrju/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TaskasSmiley.json" target="_blank">json</a><br />
