--- a/feladat.html
+++ b/feladat.html
@@ -337,3 +337,4 @@ Canada_LizzysGoldfish kihagyva (100%), <br />
 Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
 Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
 UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 52, <a href="https://www.munzee.com/map/gcngq3xm7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInAndover.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInDapto, <b>updated</b>, 62, <a href="https://www.munzee.com/map/r3g5z9k30/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInDapto.json" target="_blank">json</a><br />
