--- a/feladat.html
+++ b/feladat.html
@@ -343,3 +343,4 @@ USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
 Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
 UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 51, <a href="https://www.munzee.com/map/gcnhxpp6s/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInKingswood.json" target="_blank">json</a><br />
 Sweden_StroopwafelInvasionInLinkoping, <b>updated</b>, 54, <a href="https://www.munzee.com/map/u67hj4225/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Sweden_StroopwafelInvasionInLinkoping.json" target="_blank">json</a><br />
+Germany_StroopwafelInvasionInMeitingen, <b>updated</b>, 52, <a href="https://www.munzee.com/map/u0xspjjng/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_StroopwafelInvasionInMeitingen.json" target="_blank">json</a><br />
